--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,6 +26,8 @@ phases:
       - cp -f services/common/environment/config.example.json services/common/environment/config.$STAGE.json
       - sed -i 's/REGION_VALUE/$region_$STAGE/g' services/common/environment/config.$STAGE.json
       - sed -i 's/ADMIN_EMAIL_VALUE/$adminEmail_$STAGE/g' services/common/environment/config.$STAGE.json
+      - ls -l services/common/environment/
+      - cat services/common/environment/config.$STAGE.json
   build:
     commands:
       - echo performing build phase
