--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,8 @@ env:
   parameter-store:
     region_staging: 'region-staging'
     region_prod: 'region-prod'
-    adminEmail_staging: 'adminEmail-staging'
-    adminEmail_prod: 'adminEmail-prod'
+    admin_email_staging: 'adminEmail-staging'
+    admin_email_prod: 'adminEmail-prod'
 
 phases:
   install:
@@ -23,11 +23,7 @@ phases:
       - echo performing pre_build phase
       - yarn install
       - echo configuring environment variables
-      - cp -f services/common/environment/config.example.json services/common/environment/config.$STAGE.json
-      - var=region_$STAGE && sed -i "s/REGION_VALUE/${!var}/g" services/common/environment/config.$STAGE.json
-      - var=adminEmail_$STAGE && sed -i "s/ADMIN_EMAIL_VALUE/${!var}/g" services/common/environment/config.$STAGE.json
-      - ls -l services/common/environment/
-      - cat services/common/environment/config.$STAGE.json
+      - node cicd/setupEnvFile.js
   build:
     commands:
       - echo performing build phase
