set staging to deploy on master branch

--- a/cicd/serverless.yml
+++ b/cicd/serverless.yml
@@ -14,7 +14,7 @@ custom:
     githubtoken: '{{resolve:ssm:github-token:1}}'
 
   staging:
-    branch: staging
+    branch: master
   prod:
     branch: prod
 
