--- a/cicd/package.json
+++ b/cicd/package.json
@@ -7,7 +7,7 @@
   "author": "Erez Rokah",
   "license": "MIT",
   "devDependencies": {
-    "serverless-plugin-cicd": "erezrokah/serverless-plugin-cicd#master"
+    "serverless-plugin-cicd": "file:./serverless-plugin-cicd"
   },
   "scripts": {
     "setup": "serverless deploy",
