--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "lerna run lint",
     "test": "lerna run test",
     "test:ci": "lerna run --concurrency 1 test:ci",
-    "test:e2e": "lerna run --concurrency 1 test:e2e",
     "coverage": "lerna run --concurrency 1 coverage",
     "prettier": "lerna run prettier",
     "prettier:ci": "lerna run prettier:ci",
@@ -23,6 +22,9 @@
     "run:all:dev": "yarn deploy:dev && yarn build:frontend && yarn publish:frontend:dev",
     "run:all:staging": "yarn deploy:staging && yarn build:frontend && yarn publish:frontend:staging",
     "run:all:prod": "yarn deploy:prod && yarn build:frontend && yarn publish:frontend:prod",
+    "test:e2e:dev": "lerna run --concurrency 1 test:e2e",
+    "test:e2e:staging": "lerna run --concurrency 1 test:e2e",
+    "test:e2e:prod": "echo 'not running e2e testing in production'",
     "remove:all:dev": "lerna run --concurrency 1 remove --scope 'frontend' -- --stage dev && lerna run --concurrency 1 remove --scope 'monitoring-*' -- --stage dev",
     "remove:all:staging": "lerna run --concurrency 1 remove --scope 'frontend' -- --stage staging && lerna run --concurrency 1 remove --scope 'monitoring-*' -- --stage staging",
     "remove:all:prod": "lerna run --concurrency 1 remove --scope 'frontend' -- --stage prod && lerna run --concurrency 1 remove --scope 'monitoring-*' -- --stage prod",
