--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,8 +21,8 @@ phases:
       - yarn install
       - echo configuring environment variables
       - cp -f services/common/environment/config.example.json services/common/environment/config.$STAGE.json
-      - sed -i 's/REGION_VALUE/$AWS_REGION/g' services/common/environment/config.$STAGE.json
-      - sed -i 's/ADMIN_EMAIL_VALUE/$admin_email/g' services/common/environment/config.$STAGE.json
+      - sed -i "s/REGION_VALUE/${AWS_REGION}/g" services/common/environment/config.$STAGE.json
+      - sed -i "s/ADMIN_EMAIL_VALUE/${admin_email}/g" services/common/environment/config.$STAGE.json
   build:
     commands:
       - echo performing build phase
