--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^6.2.0",
     "fs-extra": "^7.0.1",
     "jest-dom": "^3.1.2",
+    "minimist": "^1.2.0",
     "monitoring-service": "file:./../services/monitoring-service",
     "react-test-renderer": "^16.8.2",
     "react-testing-library": "^5.9.0",
@@ -47,7 +48,8 @@
     "eject": "react-scripts eject",
     "lint": "tslint 'src/**/*.ts?(x)'",
     "coverage": "TZ=GMT yarn test --coverage",
-    "deploy": "serverless deploy",
+    "deploy": "node deploy.js",
+    "deploy:stack": "serverless deploy",
     "remove": "serverless remove",
     "publish": "serverless publishSite",
     "prettier": "prettier --write src/**/*.ts src/**/*.tsx serverless-single-page-app-plugin/*.js scripts/*.js",
