fix test command in buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,7 @@ phases:
     commands:
       - echo performing build phase
       - yarn lint
-      - yarn test
+      - yarn test:ci
       - yarn deploy:$STAGE
       - yarn test:e2e:$STAGE
 
