--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "deploy:dev": "lerna run deploy -- --stage dev",
     "deploy:staging": "lerna run deploy -- --stage staging",
     "deploy:prod": "lerna run deploy -- --stage prod",
+    "deploy:pr": "echo 'not running deploy for Pull Requests'",
     "test:e2e:dev": "lerna run --concurrency 1 test:e2e",
     "test:e2e:staging": "lerna run --concurrency 1 test:e2e",
     "test:e2e:prod": "echo 'not running e2e testing in production'",
+    "test:e2e:pr": "echo 'not running e2e testing for Pull Requests'",
     "remove:all:dev": "lerna run --concurrency 1 remove --scope 'frontend' -- --stage dev && lerna run --concurrency 1 remove --ignore 'frontend' -- --stage dev",
     "remove:all:staging": "lerna run --concurrency 1 remove --scope 'frontend' -- --stage staging && lerna run --concurrency 1 remove --ignore 'frontend' -- --stage staging",
     "remove:all:prod": "lerna run --concurrency 1 remove --scope 'frontend' -- --stage prod && lerna run --concurrency 1 remove --ignore 'frontend' -- --stage prod",
+    "remove:all:pr": "echo 'nothing to remove for Pull Requests'",
     "print:name": "lerna run print:name"
   },
   "devDependencies": {
