--- a/services/monitoring-service/package.json
+++ b/services/monitoring-service/package.json
@@ -41,6 +41,7 @@
     "serverless-webpack": "^5.2.0",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.3",
+    "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.3",
     "webpack": "^4.29.5"
