deploy only required services

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,8 +28,7 @@ phases:
       - echo performing build phase
       - yarn lint
       - yarn test:ci
-      - yarn deploy:$STAGE
-      - yarn test:e2e:$STAGE
+      - yarn deployAndRunE2eTests --commitId "${CODEBUILD_RESOLVED_SOURCE_VERSION}" --stage $STAGE
 
 cache:
   paths:
