--- a/cicd/package.json
+++ b/cicd/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "aws-sdk": "^2.453.0",
+    "colors": "^1.3.3",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-jest": "^22.5.1",
