--- a/cicd/package.json
+++ b/cicd/package.json
@@ -15,12 +15,12 @@
     "fs-extra": "^8.0.0",
     "jest": "23.6.0",
     "js-yaml": "^3.13.1",
-    "minimist": "^1.2.0",
-    "serverless-plugin-cicd": "file:./serverless-plugin-cicd"
+    "serverless-plugin-cicd": "file:./serverless-plugin-cicd",
+    "yargs": "^13.2.4"
   },
   "scripts": {
     "setup": "serverless deploy",
-    "cleanup": "serverless remove",
+    "remove": "serverless remove",
     "connectToGitHubStaging": "aws codebuild import-source-credentials --server-type GITHUB --auth-type PERSONAL_ACCESS_TOKEN --region $npm_package_regions_staging",
     "storeAdminEmailStaging": "aws ssm put-parameter --name admin-email --type String --region $npm_package_regions_staging",
     "connectToGitHubProd": "aws codebuild import-source-credentials --server-type GITHUB --auth-type PERSONAL_ACCESS_TOKEN --region $npm_package_regions_prod",
