--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "coverage": "lerna run --concurrency 1 coverage",
     "prettier": "lerna run prettier --parallel",
     "prettier:ci": "lerna run prettier:ci --parallel",
-    "deployAndRunE2eTests": "node cicd/scripts/deploy.js",
+    "deployAndRunE2eTests": "node cicd/scripts/deploy.js deploy",
     "test:e2e:dev": "lerna run --concurrency 1 test:e2e",
     "test:e2e:staging": "lerna run --concurrency 1 test:e2e",
     "test:e2e:prod": "echo 'not running e2e testing in production'",
     "deploy:all:dev": "lerna run deploy -- --stage dev",
     "deploy:all:staging": "lerna run deploy -- --stage dev",
     "deploy:all:prod": "lerna run deploy -- --stage dev",
-    "remove:all:dev": "lerna run --concurrency 1 remove --scope 'frontend' -- --stage dev && lerna run --concurrency 1 remove --ignore 'frontend' -- --stage dev",
-    "remove:all:staging": "lerna run --concurrency 1 remove --scope 'frontend' -- --stage staging && lerna run --concurrency 1 remove --ignore 'frontend' -- --stage staging",
-    "remove:all:prod": "lerna run --concurrency 1 remove --scope 'frontend' -- --stage prod && lerna run --concurrency 1 remove --ignore 'frontend' -- --stage prod",
+    "remove:all:dev": "node cicd/scripts/deploy.js remove --stage dev",
+    "remove:all:staging": "node cicd/scripts/deploy.js remove --stage staging",
+    "remove:all:prod": "node cicd/scripts/deploy.js remove --stage prod",
     "print:name": "lerna run print:name"
   },
   "devDependencies": {
