--- a/buildspec.yml
+++ b/buildspec.yml
@@ -34,11 +34,7 @@ phases:
         if expr "${CODEBUILD_WEBHOOK_TRIGGER}" : "^pr/" >/dev/null; then
           echo 'Skipping deployment for Pull Requests'
         else
-          if [ "${FORCE_DEPLOY_ALL}" = "true" ]; then
-            yarn deploy:all:$STAGE && yarn test:e2e:$STAGE            
-          else
-            yarn deployAndRunE2eTests --commitId "${CODEBUILD_RESOLVED_SOURCE_VERSION}" --stage $STAGE
-          fi          
+          yarn deployAndRunE2eTests --commitId "${CODEBUILD_RESOLVED_SOURCE_VERSION}" --stage $STAGE --forceAll "${FORCE_DEPLOY_ALL:-false}"
         fi
 
 cache:
