--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "prettier": "lerna run prettier --parallel",
     "prettier:ci": "lerna run prettier:ci --parallel",
     "deployAndRunE2eTests": "node cicd/scripts/deploy.js deploy",
-    "test:e2e:dev": "lerna run --concurrency 1 test:e2e",
-    "test:e2e:staging": "lerna run --concurrency 1 test:e2e",
-    "test:e2e:prod": "echo 'not running e2e testing in production'",
+    "test:e2e": "lerna run --concurrency 1 test:e2e",
     "remove:all:dev": "node cicd/scripts/deploy.js remove --stage dev",
     "remove:all:staging": "node cicd/scripts/deploy.js remove --stage staging",
     "remove:all:prod": "node cicd/scripts/deploy.js remove --stage prod",
