--- a/services/monitoring-endpoints-tester-service/serverless.yml
+++ b/services/monitoring-endpoints-tester-service/serverless.yml
@@ -1,4 +1,4 @@
-service: monitoring-service
+service: monitoring-endpoints-tester-service
 
 plugins:
   - serverless-pseudo-parameters
@@ -13,6 +13,9 @@ custom:
   currentStage: ${opt:stage, self:custom.defaultStage}
   currentRegion: ${file(../common/environment/config.${self:custom.currentStage}.json):region}
 
+  monitoringCommonServiceName: ${file(../monitoring-common/serverless.yml):service}
+  monitoringAppSyncServiceName: ${file(../monitoring-appsync-service/serverless.yml):service}
+
   alarmsTopicName: ${self:service}-alarms-topic-${self:custom.currentStage}
   alarmsTopicArn: arn:aws:sns:#{AWS::Region}:#{AWS::AccountId}:${self:custom.alarmsTopicName}
 
@@ -21,11 +24,10 @@ custom:
 
   adminEmail: ${file(../common/environment/config.${self:custom.currentStage}.json):adminEmail}
 
-  dataTableName: ${self:service}-data-table-${self:custom.currentStage}
   endpointsTableName: ${self:service}-endpoints-table-${self:custom.currentStage}
 
-  checkEndpointStepFunction: check-endpoint-step-function-${self:service}-${self:custom.currentStage}
-  checkEndpointStepFunctionId: CheckDashendpointDashstepDashfunctionDashmonitoringDashserviceDash${self:custom.currentStage}
+  checkEndpointStepFunction: ${self:service}-check-endpoint-step-function-${self:custom.currentStage}
+  checkEndpointStepFunctionId: MonitoringDashendpointsDashtesterDashserviceDashcheckDashendpointDashstepDashfunctionDash${self:custom.currentStage}
 
   output:
     handler: ./scripts/stackOutput.handler
@@ -50,7 +52,7 @@ stepFunctions:
         - schedule:
             rate: rate(2 hours)
             enabled: false
-      name: fan-out-step-function-${self:service}-${self:custom.currentStage}
+      name: ${self:service}-fan-out-step-function-${self:custom.currentStage}
       definition:
         Comment: 'A step function to fan-out several other step functions'
         StartAt: Fanout
@@ -61,7 +63,6 @@ stepFunctions:
             End: true
       dependsOn:
         - EndpointsTable
-        - UserPool
         - ApiGatewayAuthorizer
 
     checkEndpointStepFunction:
@@ -90,17 +91,7 @@ stepFunctions:
                 States:
                   PersistResults:
                     Type: Task
-                    Resource: 'arn:aws:states:::dynamodb:putItem'
-                    Parameters:
-                      TableName: ${self:custom.dataTableName}
-                      Item:
-                        'id': { 'S.$': '$.id' }
-                        'name': { 'S.$': '$.name' }
-                        'url': { 'S.$': '$.url' }
-                        'averageLatencyMs': { 'N.$': '$.averageLatencyMs' }
-                        'lastSample': { 'S.$': '$.lastSample' }
-                        'status': { 'S.$': '$.status' }
-                        'logo': { 'S.$': '$.logo' }
+                    Resource: arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:${self:service}-${self:custom.currentStage}-persistResults
                     End: true
               - StartAt: CheckResults
                 States:
@@ -135,7 +126,6 @@ stepFunctions:
       dependsOn:
         # - AlarmsTopic
         - NotificationsTopic
-        - MonitoringDataTable
 
       # alarms:
       #   topics:
@@ -153,8 +143,26 @@ functions:
   checkEndpoint:
     handler: src/checkEndpointHandler.checkEndpoint
     timeout: 15
+
   aggregateData:
     handler: src/aggregateDataHandler.aggregateData
+
+  persistResults:
+    handler: src/persistResultsHandler.persistResults
+    environment:
+      GRAPHQL_ENDPOINT_URL:
+        Fn::ImportValue: '${self:custom.monitoringAppSyncServiceName}:${self:custom.currentStage}:GraphQlApiUrl'
+    iamRoleStatementsInherit: true
+    iamRoleStatements:
+      - Effect: 'Allow'
+        Action:
+          - 'appsync:GraphQL'
+        Resource:
+          - Fn::Join:
+              - ''
+              - - 'Fn::ImportValue': '${self:custom.monitoringAppSyncServiceName}:${self:custom.currentStage}:GraphQlApiArn'
+                - '/types/Mutation/fields/addUser'
+
   fanout:
     handler: src/fanoutHandler.fanout
     environment:
@@ -200,6 +208,5 @@ provider:
 resources:
   - ${file(resources/dynamoDb.yml)}
   - ${file(resources/snsTopics.yml)}
-  - ${file(resources/cognito.yml)}
   - ${file(resources/authorizer.yml)}
   - ${file(resources/outputs.yml)}
