refactor output scripts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@types/react-test-renderer": "^16.8.1",
     "dotenv": "^6.2.0",
     "fs-extra": "^7.0.1",
+    "js-yaml": "^3.13.1",
     "jest-dom": "^3.1.2",
     "minimist": "^1.2.0",
     "monitoring-appsync-service": "file:./../services/monitoring-appsync-service",
@@ -32,6 +33,7 @@
     "serverless-appsync-plugin": "^1.0.9",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-s3-remover": "^0.6.0",
+    "serverless-scriptable-plugin": "1.0.1",
     "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
     "source-map-explorer": "^1.7.0",
     "tslint": "^5.12.1",
