--- a/services/monitoring-appsync-service/resources/outputs.yml
+++ b/services/monitoring-appsync-service/resources/outputs.yml
@@ -1,4 +1,11 @@
 Outputs:
+  GraphQLApiUrl:
+    Value:
+      'Fn::GetAtt': [GraphQlApi, GraphQLUrl]
+    Export:
+      Name: '${self:service}:${self:custom.currentStage}:GraphQLApiUrl'
   GraphQLApiArn:
     Value:
-      Ref: GraphQLApi
+      Ref: GraphQlApi
+    Export:
+      Name: '${self:service}:${self:custom.currentStage}:GraphQLApiArn'
