--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "Frontend",
   "dependencies": {
+    "@graphql-codegen/typescript-resolvers": "^1.1.3",
     "aws-amplify": "^1.1.19",
     "aws-amplify-react": "^2.3.0",
     "react": "^16.8.2",
@@ -15,6 +16,9 @@
   },
   "devDependencies": {
     "@anttiviljami/serverless-stack-output": "^0.3.1",
+    "@graphql-codegen/cli": "^1.1.3",
+    "@graphql-codegen/typescript": "1.1.3",
+    "@graphql-codegen/typescript-operations": "^1.1.3",
     "@types/jest": "^24.0.5",
     "@types/node": "^11.9.4",
     "@types/react": "^16.8.3",
@@ -23,8 +27,8 @@
     "@types/react-test-renderer": "^16.8.1",
     "dotenv": "^6.2.0",
     "fs-extra": "^7.0.1",
-    "js-yaml": "^3.13.1",
     "jest-dom": "^3.1.2",
+    "js-yaml": "^3.13.1",
     "minimist": "^1.2.0",
     "monitoring-appsync-service": "file:./../services/monitoring-appsync-service",
     "monitoring-tester-service": "file:./../services/monitoring-tester-service",
@@ -57,7 +61,8 @@
     "publish": "serverless publishSite",
     "prettier": "prettier --write src/**/*.ts src/**/*.tsx serverless-single-page-app-plugin/*.js scripts/*.js",
     "prettier:ci": "prettier --list-different src/**/*.ts src/**/*.tsx serverless-single-page-app-plugin/*.js scripts/*.js",
-    "print:name": "echo ${npm_package_name}"
+    "print:name": "echo ${npm_package_name}",
+    "graphql:codegen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": "react-app"
