--- a/services/monitoring-appsync-service/serverless.yml
+++ b/services/monitoring-appsync-service/serverless.yml
@@ -14,6 +14,9 @@ custom:
   serviceRole: ${self:service}-dynamo-${self:custom.currentStage}
   serviceRolePolicy: ${self:service}-dynamo-policy-${self:custom.currentStage}
 
+  logsRole: ${self:service}-logs-${self:custom.currentStage}
+  logsRolePolicy: ${self:service}-logs-policy-${self:custom.currentStage}
+
   output:
     handler: ./scripts/stackOutput.handler
 
@@ -26,6 +29,11 @@ custom:
       userPoolId:
         Fn::ImportValue: '${self:custom.monitoringCommonServiceName}:${self:custom.currentStage}:UserPoolId'
     serviceRole: ${self:custom.serviceRole}
+
+    logConfig:
+      loggingRoleArn: { Fn::GetAtt: [AppSyncLogsRole, Arn] }
+      level: ERROR
+
     dataSources:
       - type: AMAZON_DYNAMODB
         name: DataEntries
@@ -73,5 +81,6 @@ provider:
         - '*'
 
 resources:
+  - ${file(resources/appsync-logs-role.yml)}
   - ${file(resources/appsync-service-role.yml)}
   - ${file(resources/outputs.yml)}
